# CyDAQ

./: Enclosure.step  README.md  TODO.txt
Archive/sdmay18-31/src/: .gitignore
Archive/sdmay18-31/src/firmware/: .gitignore  CMakeLists.txt  README.md  debug.cfg  firmware.ld  firmware.specs
Archive/sdmay18-31/src/firmware/libs/driverlib/: CMakeLists.txt
Archive/sdmay18-31/src/firmware/libs/utils/: CMakeLists.txt
Archive/sdmay18-31/src/firmware/src/: CMakeLists.txt  FreeRTOSConfig.h  communications.h  digital_sensor_task.c  digital_sensor_task.h  firmware_main.c  priorities.h  startup_gcc.c  uart_rx_task.c  uart_rx_task.h  uart_tx_task.c  uart_tx_task.h
Archive/sdmay18-31/src/firmware/src/drivers/: adc_driver.c  adc_driver.h  filter_driver.c  filter_driver.h  filters.c  filters.h  i2c_driver.c  i2c_driver.h  imu_driver.c  imu_driver.h  mux_driver.c  mux_driver.h  pot_driver.c  pot_driver.h  shared_defs.h  uart_driver.c  uart_driver.h  watchdog_driver.c  watchdog_driver.h
Archive/sdmay18-31/src/firmware/tools/lmflash/: .gitignore
Archive/sdmay18-31/src/front_end/: ctrl_comm.py  ctrl_crc.py  ctrl_fileio.py  gui_collect.py  gui_digital.py  gui_top.py  mdl_digital.py
Archive/sdmay18-31/src/hardware/: BOM-491.xlsx  README.md
Documentation/CyDAQ_HW/: PMIC BOM.xlsx
Documentation/Lab Documents/Old Labs/Dickerson Labs/: EE224-Lab 3Notes.ppt  SignalGenerationv2017.docx  TuningFork.docx
Documentation/Lab Documents/Supporting Docs/: CyCAQ 2.0 SR Design Proposal Draft.docx
Documentation/Lab Documents/Taylors_Labs/Fourier_Lab/: AddPeriods.m  CutSample.m  Fourier Series_ The Math Behind the Music.docx  KEY_find_ak.m  KEY_find_aks.m  KEY_fsynt.m  PlotPitch.m  find_ak.m  find_aks.m  fsynt.m  gen_square.m  test_original_code.m  ~$urier Series_ The Math Behind the Music.docx
Documentation/sdmay18-31-Docs/Final Report/: Final Report.docx
Documentation/sdmay18-31-Docs/Hardware Report/: Future Work.docx
Documentation/sdmay18-31-Docs/Lab Manuals/Automation System Lab/: Automation System Lab Outline.docx
Documentation/sdmay18-31-Docs/Lab Manuals/FFT Lab Pulse Sensor/: Pulse Rate Sensor Lab.docx  ppg.mat  ppg_pr_fft.m
Documentation/sdmay18-31-Docs/Lab Manuals/HandTremorLab/: FFTPlot.m  FilterVec  Results.m  cydaqFiltering.mat  oneHzMove.mat  oneHzShake.mat
Documentation/sdmay18-31-Docs/Lab Manuals/Intro to Matlab and Device/: Lab1.odt
Documentation/sdmay18-31-Docs/Lab Manuals/Noisy IR Sensor Lab/: Noisy Filter Lab.docx
Documentation/sdmay18-31-Docs/User Guide/: CyDAQ_User_Guide.docx
src/firmware/: .gitignore  DAD_test_bench.dwf3work  README.md
src/firmware/423 Config files/: README.txt  config-1.json  config-2.json  config-3.json  config-4.json  config-5.json  config-6.json  config-7.json
src/firmware/zybo_z7_firmware/: zybo_xadc_test.c
src/font_end_2.0/: .gitignore  GUI_error_handle.py  GUI_main  GUI_main.py  GUI_main.spec  command_comm.py  data_handle.py  instructions.txt  master_enum.py  none  packages.txt  requirements.txt  serial_comm.py
src/front_end/: .gitignore  Doxyfile  README.md  ctrl_comm.py  ctrl_digital.py  ctrl_settings.py  ctrl_utils.py  gui_analog.py  gui_collect.py  gui_curr_cfg.py  gui_digital_sen.py  gui_top.py  gui_welcome.py  install.py  main.py  mdl_firmware.py  mdl_global.py
src/hardware/224_PMICs/: 224_PMICs.PrjPcb  README.txt
src/hardware/CyDAQ/: CyDAQ.PrjPcb  CyDAQ.PrjPcbStructure  Enclosure Model.step  Enclosure.f3d  Enclosure.step  README.md  Sheet0 - Cover Sheet.SchDoc  Sheet1 - Power Supplies.SchDoc  Sheet2 - Filters.SchDoc
(+1105 files in other folders)
